# Projet_5-ml-api

./: .env.example  .gitignore  Dockerfile  README.md  preprocessor.pkl  pyproject.toml
.github/workflows/: tests.yml
app/: api.py
code/: train_model.py
database/: create_prediction_tables.py  db_connection.py  import_csv.py
deploiement_modele_ml/: Dockerfile  requirements.txt
deploiement_modele_ml/app/: api.py
deploiement_modele_ml/code/: train_model.py
deploiement_modele_ml/database/: create_prediction_tables.py  db_connection.py  import_csv.py
deploiement_modele_ml/notebooks/: Projet_4.ipynb
deploiement_modele_ml/tests/: test_unitaire_ml_api.py
models/: model.pkl
tests/: test_unitaire_ml_api.py
